# knock_da

./: README.md  demo.ipynb  pyproject.toml  tree
knock_da/: mycv.py
knock_da/ch01/: notebook1.ipynb
knock_da/ch02/: notebook2.ipynb
knock_da/ch03/: notebook3.ipynb
knock_da/ch04/: notebook4.ipynb
knock_da/ch05/: notebook5.ipynb  tree
knock_da/ch06/: notebook6.ipynb
knock_da/ch07/: notebook7.ipynb
